# AoC-2025

./: .gitignore  readme.md
cpp/: .gitignore  CMakeLists.txt  default.nix  flake.nix  main.cpp  readme.md
cpp/days/: day01.cpp  day01.h  day03.cpp  day03.h  utils.h
haskell/: aoc-2025.cabal  aoc2025.cabal  bench.sh  cabal.project  flake.nix  out.txt  readme.md  result
haskell/src/: Bench.hs  Day01.hs  Main.hs
haskell/src/days/: Base.hs  Day01.hs  Day02.hs  Day03.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs
inputs/: readme.md
rust/: Cargo.toml  flake.nix  readme.md  result  rust-toolchain.toml
rust/benches/: bench_days.rs
rust/src/: day01.rs  day02.rs  day04.rs  day07.rs  lib.rs  main.rs
