cabal-version:   3.0
name:            example
version:         0.1.0.0
license:         NONE
author:          wibble
maintainer:      wibble132@gmail.com
build-type:      Simple

common warnings
    ghc-options: -Wall

executable aoc-2025
    import:           warnings
    main-is:          Main.hs
    build-depends:    base
                 ,    parsec
    hs-source-dirs:   src
    default-language: Haskell2010
    other-modules:    Day01
