cabal-version:   3.8
name:            aoc2025
version:         0.1.0.0
license:         NONE
author:          wibble
maintainer:      wibble132@gmail.com
build-type:      Simple

common warnings
    ghc-options: -Wall
    default-extensions: TypeFamilies, AllowAmbiguousTypes, ScopedTypeVariables, TypeApplications

library
    import:           warnings
    build-depends:    base
                 ,    parsec
                 ,    containers
                 ,    split
    hs-source-dirs:   src/days
    default-language: Haskell2010
    exposed-modules:  Base,
                      Day01, Day02, Day03, Day05,
                      Day06
    other-modules:    

executable aoc2025
    import:           warnings
    main-is:          Main.hs
    build-depends:    base, aoc2025, template-haskell
    hs-source-dirs:   src
    default-language: Haskell2010

benchmark bench
    import:           warnings
    main-is:          Bench.hs
    build-depends:    base, aoc2025, criterion
    hs-source-dirs:   src
    default-language: Haskell2010