cabal-version:   3.8
name:            aoc2025
version:         0.1.0.0
license:         NONE
author:          wibble
maintainer:      wibble132@gmail.com
build-type:      Simple

common warnings
    ghc-options: -Wall
    default-extensions: TypeFamilies, AllowAmbiguousTypes, ScopedTypeVariables, TypeApplications, InstanceSigs, TupleSections

library
    import:           warnings
    build-depends:    base
                 ,    parsec
                 ,    containers
                 ,    split
                 ,    vector
    hs-source-dirs:   src/days
    default-language: Haskell2010
    exposed-modules:  Base,
                      Day01, Day02, Day03, Day05,
                      Day06, Day07, Day08, Day09,
                      Day10, Day11, Day12
    other-modules:    

executable aoc2025
    import:           warnings
    main-is:          Main.hs
    build-depends:    base, aoc2025
    hs-source-dirs:   src
    default-language: Haskell2010

benchmark bench
    import:           warnings
    main-is:          Bench.hs
    build-depends:    base, aoc2025, criterion
    hs-source-dirs:   src
    default-language: Haskell2010